--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </h1>
 
             <figure>
-                <img src="/img/fotos/eu2.jpg" alt="Minha foto">
+                <img src="./img/fotos/eu2.jpg" alt="Minha foto">
             </figure>
         </div>
     </div>
