--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             <div id="sobre-area">
                 <figure>
-                    <img src="/img/fotos/eu.jpg" alt="Foto minha">
+                    <img src="./img/fotos/eu.jpg" alt="Foto minha">
                 </figure>
 
                 <article>
@@ -153,7 +153,7 @@
                 </div>
                 <div class="item">
                     <div class="info em-breve">
-                        <img src="/img/em_breve.svg" alt="">
+                        <img src="./img/em_breve.svg" alt="">
                         <span>
                             Em Breve
                         </span>
