--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meu Portifólio</title>
+    <link rel="shortcut icon" href="/img/fotos/eu.jpg" type="image/x-icon">
 
     <!-- Alguns ícones foram pegos do site "icons8.com" -->
     <link rel="stylesheet"
