--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portifólio</title>
-    <link rel="shortcut icon" href="/img/fotos/eu.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/fotos/eu.jpg" type="image/x-icon">
 
     <!-- Alguns ícones foram pegos do site "icons8.com" -->
     <link rel="stylesheet"
